[gd_scene load_steps=3 format=3 uid="uid://vbl6pamnom28"]

[ext_resource type="Script" path="res://Scene/UI/MainMenu.gd" id="1_0whei"]
[ext_resource type="Texture2D" uid="uid://1of1ejo0mlt7" path="res://BTM_logo.png" id="2_6ugtj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0whei")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6ugtj")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.0
offset_right = 8.0
offset_bottom = 16.0
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU_CONTINUE"

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU_NEW_GAME"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU_OPTIONS"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU_CREDITS"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MENU_QUIT"
